# mstream-rs

./: .env  .gitignore  Cargo.toml  README.md  mstream.sqlite
migrations/: 0001_init.sql
src/: main.rs
src/api/: admin.rs  auth.rs  mod.rs  public.rs
src/conf/: mod.rs
webapp/: package-lock.json
webapp/admin/: index.html
webapp/login/: index.html
