[package]
name = "mstream"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
toml = "0.5"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "sqlite", "migrate" ] }
futures = "0.3"
home = "0.5.4"
rand = "0.8.5"
jsonwebtoken = "8"
argon2 = "0.4.1"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]